--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@POLZOCR:registry=https://npm.pkg.github.com
+@polzocr:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=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
