--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "main": "src/select/index.jsx",
   "version": "0.4.0",
   "private": false,
-  "repository": "https://github.com/polzocr/react_select_package",
+  "repository": {
+    "url": "https://github.com/polzocr/react_select_package"
+  },
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
