--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "@polzocr/react-selectator",
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": ["dist", "README.md"],
-  "version": "0.13.0",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "version": "0.14.0",
   "private": false,
   "repository": {
     "type": "git",
