--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,5 @@
 {
     "presets": [
-        [
-            "react-app",
-            {
-                "absoluteRuntime": false
-            }
-        ]
+        "react-app"
     ]
 }
