--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
     "presets": [
-        "react-app"
+        [
+            "react-app",
+            {
+                "absoluteRuntime": false
+            }
+        ]
     ]
 }
