--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polzocr/react-selectator",
-  "main": "dist/index.js",
+  "main": "build/main.d2b8df6c.js",
   "module": "dist/index.js",
   "files": [
     "dist",
@@ -28,20 +28,21 @@
     ]
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "peerDependencies": {
     "react": "^18.2.0",
