--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polzocr/react-selectator",
-  "main": "build/static/js/main.d2b8df6c.js",
+  "main": "build/index.html",
   "version": "0.20.0",
   "private": false,
   "repository": {
