--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "@polzocr/react-selectator",
   "main": "dist/index.js",
-  "files": ["dist", "README.md"],
-  "version": "0.20.0",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "version": "0.21.0",
   "private": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/polzocr/react_select_package"
   },
   "dependencies": {
-    "prop-types": "^15.8.1"    
+    "prop-types": "^15.8.1"
   },
   "scripts": {
     "clean": "rimraf dist",
