--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "prop-types": "^15.8.1"
   },
   "scripts": {
+    "test": "react-scripts test",
     "clean": "rimraf dist",
-    "compile": "npm run clean && cross-env NODE_ENV=production babel src --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__"
+    "compile": "npm run clean && cross-env NODE_ENV=production babel src/index.jsx --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__"
   },
   "eslintConfig": {
     "extends": [
@@ -33,6 +34,7 @@
     "@testing-library/user-event": "^13.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.40.0",
+    "react-scripts": "5.0.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
